core-system/istio/grafana/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "k8s-istiosys-istiogat-4ef32a305c-597890104.eu-west-1.elb.amazonaws.com"
    external-dns.alpha.kubernetes.io/hostname: "grafana.meraki-mv-rekognition.aws.outscope.com"
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http-grafana
        protocol: HTTP
      hosts:
        - "grafana.meraki-mv-rekognition.aws.outscope.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - "grafana.meraki-mv-rekognition.aws.outscope.com"
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
